2007-10-09  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.9.0

	* configure.in: Increase vesion number.

	* libpam/Makefile.am: Increase release number.
	* libpam_misc/Makefile.am: Increase release number.

	* po/*.po: Regenerate.

2007-10-08  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_time/pam_time.c (is_same): Length of strings without
	wildcard needs to be the same.
	* modules/pam_group/pam_group.c (is_same): Likewise.

2007-10-01  Thorsten Kukuk  <kukuk@thkukuk.de>

	* xtests/tst-pam_group1.c: New test case for user compare in pam_group.
	* xtests/tst-pam_group1.sh: Script to run test case.
	* xtests/tst-pam_group1.pamd: Config for test case.
	* xtests/Makefile.am: Add tst-pam_group1 test case.
	* xtests/run-xtests.sh: Save/restore group.conf.
	* xtests/group.conf: New.

	* modules/pam_xauth/pam_xauth.c (pam_sm_open_session): Don't
	free arguments used for putenv().

	* doc/man/pam_putenv.3.xml: Document that application has to free
	the memory.

2007-09-27  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_succeed_if/pam_succeed_if.c (evaluate_inlist): Fix in
	operator rhbz #295151.
	* modules/pam_namespace/pam_namespace.c (poly_name): Do not try to
	get context when SELinux is disabled.

2007-09-27  Thorsten Kukuk  <kukuk@thkukuk.de>

	* xtests/tst-pam_succeed_if1.c: New test case for
	https://bugzilla.redhat.com/show_bug.cgi?id=295151
	* xtests/tst-pam_succeed_if1.sh: Script to run test case.
	* xtests/tst-pam_succeed_if1.pamd: Config for test case.
	* xtests/Makefile.am: Add tst-pam_succeed_if1 test case.

	* xtests/run-xtests.sh: Add support to skip tests.
	* xtests/tst-pam_limits1.c: Skip test if RLIMIT_NICE is not
	defined.

2007-09-03  Steve Langasek  <vorlon@debian.org>

	* modules/pam_limits/pam_limits.c: remove a number of unnecessary
	string manipulations, including a strncpy() that was acting on
	overlapping memory.

	* libpam_misc/misc_conv.c: don't block SIGINT in misc_conv; it's